# barrzen-axum-template

./: .env  .env.example  AGENTS.md  AGENTS.project.md  Cargo.toml  README.md  README.project.md  cargo-generate.toml
.github/workflows/: bump-kit.yml
hooks/: post-script.rhai
scripts/: bump-kit.py
src/: main.rs
tests/: integration.rs
