[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2024"
publish = false

description = "{{project-name}} powered by Barrzen Axum Kit"

[dependencies]
# Kit dependencies
barrzen-axum-core = { version = "0.1.4", features = ["openapi"] }
barrzen-axum-infra = { version = "0.1.4", features = ["db", "cache-moka"] }
barrzen-axum-obs = { version = "0.1.4", features = ["otel"] }
barrzen-axum-openapi = { version = "0.1.4", features = ["openapi"] }

# Core deps needed for main
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
utoipa = { version = "5", features = ["axum_extras"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
serde_json = "1"
