[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2024"
publish = false

description = "{{project-name}} powered by Barrzen Axum Kit"

[dependencies]
# Kit dependencies
barrzen-axum-core = { version = "{{kit_version}}", features = [
{{#if feature_openapi}}"openapi",{{/if}}
] }
barrzen-axum-infra = { version = "{{kit_version}}", features = [
{{#if feature_db}}"db",{{/if}}
{{#if feature_cache_moka}}"cache-moka",{{/if}}
{{#if feature_cache_redis}}"cache-redis",{{/if}}
{{#if feature_meilisearch}}"meilisearch",{{/if}}
{{#if feature_nats}}"nats",{{/if}}
] }
barrzen-axum-obs = { version = "{{kit_version}}", features = [
{{#if feature_otel}}"otel",{{/if}}
{{#if feature_fast_log}}"fast-log",{{/if}}
] }
{{#if feature_openapi}}
barrzen-axum-openapi = { version = "{{kit_version}}", features = ["openapi"] }
{{/if}}

# Core deps needed for main
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
{{#if feature_openapi}}
utoipa = { version = "5", features = ["axum_extras"] }
{{/if}}

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
serde_json = "1"
